@@ -118,7 +118,7 @@ bool DysectAPI::CodeLocation::findSymbol(SymtabAPI::Symtab* symtab, string name,
   bool exit = false;
   vector<SymtabAPI::Symbol *> symtabSymbols;
   vector<SymtabAPI::Symbol *> foundSymtabSymbols;
-  vector<Dyninst::Address> lOffsets;
+  set<pair<Dyninst::Address, string> > lOffsets;
 
   foundSymtabSymbols.clear();
   symtabSymbols.clear();
@@ -155,10 +155,10 @@ bool DysectAPI::CodeLocation::findSymbol(SymtabAPI::Symtab* symtab, string name,
     if (exit == true)
       offset = offset + ssym->getSize() - 1; // this is computing the exit!
 
-    // XXX: Search for pair instead of plain offset
-    if(dsym->offsets.find(offset) != dsym->offsets.end()) {
+    if(lOffsets.find(pair<Dyninst::Address, string> (offset, *str)) != lOffsets.end()) {
       continue;
     }
+    lOffsets.insert(pair<Dyninst::Address, string> (offset, *str));
 
     dsym->offsets.insert(pair<Dyninst::Address, string*>(offset, str));
 
